--- a/posts/Diseño de experimentos/index.qmd
+++ b/posts/Diseño de experimentos/index.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Post With Code"
-author: "Harlow Malloc"
+title: "Diseño de experimentos"
+author: "O. Herrera"
 date: "2024-08-07"
-categories: [news, code, analysis]
+categories: [Maestria]
 image: "image.jpg"
 ---
 
